<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ここにいる</string>

    <!-- メニュー項目 -->
    <string name="menu_create_room">新規ルーム</string>
    <string name="menu_exit_room">退室</string>
    <string name="menu_update_room_list">ルームリスト更新</string>
    <string name="menu_logout">ログアウト</string>
    <string name="menu_delete_user">ユーザ削除</string>
    <string name="menu_info">バージョン情報</string>
    <string name="menu_settings">設定</string>

    <!-- ドロワーアイテム -->
    <string name="drawer_item_create_room">新規ルーム作成</string>
    <string name="drawer_item_update_room_list">ルーム一覧更新</string>
    <string name="drawer_item_logout">ログアウト</string>
    <string name="drawer_item_delete_user">ユーザ削除</string>
    <string name="drawer_open">開く</string>
    <string name="drawer_close">閉じる</string>
    <string name="drawer_exit_room">退室</string>
    <string name="drawer_settngs">設定</string>

    <!-- ダイアログボタン -->
    <string name="dialog_create_button">作成</string>
    <string name="dialog_enter_room_button">入室</string>
    <string name="dialog_exit_room_button">退室</string>
    <string name="dialog_login_button">ログイン</string>
    <string name="dialog_logout_button">ログアウト</string>
    <string name="dialog_regist_user_button">ユーザ登録</string>
    <string name="dialog_end_button">終了</string>
    <string name="dialog_delete_button">削除</string>
    <string name="dialog_cancel_button">キャンセル</string>
    <string name="dialog_close_button">閉じる</string>

    <!-- ダイアログラベル -->
    <string name="dialog_room_name_label">ルーム名</string>
    <string name="dialog_room_key_label">ルームキー</string>
    <string name="dialog_user_name_label">ユーザ名</string>
    <string name="dialog_user_password_label">パスワード</string>
    <string name="dialog_memo_title_label">タイトル</string>
    <string name="dialog_memo_content_label">メモ</string>
    <string name="dialog_memo_range_title_label">公開方法</string>
    <string name="dialog_memo_range_radio_button_label1">自分のみ</string>
    <string name="dialog_memo_range_radio_button_label2">ルームメンバーのみ</string>
    <string name="dialog_memo_range_radio_button_label3">全員</string>

    <!-- 新規ルーム作成ダイアログ -->
    <string name="dialog_create_room_title">新規ルーム作成</string>

    <!-- ルーム削除ダイアログ -->
    <string name="dialog_delete_room_title">ルーム削除</string>
    <string name="dialog_delete_room_message_prefix">「</string>
    <string name="dialog_delete_room_message_suffix">」ルームを削除しますか</string>

    <!-- ユーザ削除ダイアログ -->
    <string name="dialog_delete_user_title">ユーザ削除</string>
    <string name="dialog_delete_user_message">ユーザを削除しますか</string>

    <!-- 入室ダイアログ -->
    <string name="dialog_enter_room_title">入室</string>
    <string name="dialog_entered_room_check_box">次回入室済みとする</string>

    <!-- 退室ダイアログ -->
    <string name="dialog_exit_room_title">退室</string>
    <string name="dialog_exit_room_message">退室しますか</string>

    <!-- ログインダイアログ -->
    <string name="dialog_login_title">ようこそ</string>
    <string name="dialog_logined_check_box">次回ログイン済みとする</string>

    <!-- ログアウトダイアログ -->
    <string name="dialog_logout_title">ダイアログ</string>
    <string name="dialog_logout_message">ログアウトしますか</string>

    <!-- メモ編集ダイアログ -->
    <string name="dialog_memo_title">メモ編集</string>

    <!-- バージョン情報ダイアログ -->
    <string name="dialog_info_title">バージョン情報</string>
    <string name="dialog_info_message_prefix">ここにいる\nVer.</string>
    <string name="dialog_info_message_suffix">\nCopyright(C) paveway.info. All rights reserved.</string>

    <!-- マップ画面 -->
    <string name="activity_map_follow_toggle_button_on">追従ON</string>
    <string name="activity_map_follow_toggle_button_off">追従OFF</string>

    <!-- 設定画面 -->
    <string name="category_action_title">動作</string>

    <string name="logged_check_box_title">ログイン済み</string>
    <string name="logged_check_box_summary">ログイン済みを設定/解除します</string>
    <string name="entered_room_check_box_title">入室済み</string>
    <string name="entered_room_check_box_summary">入室済みを設定/解除します</string>

    <string name="category_init_title">初期値</string>

    <string name="interval_list_title">更新間隔</string>
    <string name="interval_list_summary">位置情報を更新する間隔を選択してください</string>
    <string name="interval_list_dialogtitle">更新間隔選択</string>

    <!-- カメラポジション初期値 -->
    <string name="camera_position_zoom">15</string>
    <string name="camera_position_titlt">0</string>
    <string name="camera_position_bearing">0</string>

    <!-- エラーメッセージ -->
    <string name="error_response">エラーが発生しました</string>
    <string name="error_input_all">すべて入力してください</string>
    <string name="error_input_room_key">ルームキーを入力してください</string>
    <string name="error_login">ユーザ名またはパスワードが違います</string>
    <string name="error_memo_title">タイトルを入力してください</string>
    <string name="error_regist_user">ユーザを登録できませんでした</string>
    <string name="error_logout">ログアウトできませんでした</string>
    <string name="error_room_list">ルーム名を取得できませんでした</string>
    <string name="error_delete_user">ユーザを削除できませんでした</string>
    <string name="error_enter_room">入室できませんでした</string>
    <string name="error_exit_room">退室できませんでした</string>
    <string name="error_delete_room">ルームを削除できませんでした</string>
    <string name="error_illegal_transition">不正な画面遷移です</string>
    <string name="error_init_map">マップの初期化ができませんでした</string>
    <string name="error_edit_memo">メモを登録できませんでした</string>
    <string name="error_delete_memo">メモを削除できませんでした</string>
    <string name="error_broadcast_receiver">ブロードキャストレシーバーを登録できません</string>
    <string name="error_start_location_service">位置サービスを開始できませんでした</string>

</resources>
